--- a/laxpresspackers.com/styles.css
+++ b/laxpresspackers.com/styles.css
@@ -50,15 +50,13 @@ body    {
     line-height:1.5;}
 
 .form-container{
-    width:35%;
+    width:auto;
     padding:15px 20px;
     background-color:rgba(255, 255, 255, 0.95);
     border:1px solid #007acc;
     border-radius:8px;
     box-shadow:0 4px 6px rgba(0, 0, 0, 0.1);
-    margin: right 10px;
     
-    margin-top: 0%;
 }
 
 .form-title{font-size:20px;margin-bottom:10px;color:#007acc;text-align:center;}
@@ -408,7 +406,7 @@ p{margin:0 0 10px;}
   .why-choose-us-section {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     width: auto;
     padding: 50px;
     height: 50vh;
